--- a/css/estilo.css
+++ b/css/estilo.css
@@ -122,6 +122,13 @@ animation-iteration-count: infinite;
     padding: 5%;
     position: absolute;
     bottom: 0;
+    height: 40vh;
+    transition: height 0.5s ease-in-out;
+}
+.bottom_card.full{
+    height: 100vh;
+    padding: 0%;
+    transition: height 0.5s ease-in-out;
 }
 h1{
     font-size: 2.2rem;
@@ -478,4 +485,61 @@ h1{
 .disabled{
     pointer-events: none;
     opacity: 0.5;
+}
+.desc_plan{
+    margin-top: 2em;
+    margin-left: 8px;
+    margin-right: 8px;
+    font-size: 1.9em;
+}
+.price{
+    color: rgb(235, 113, 67);
+    text-shadow: rgb(255 164 183) 5px 0px;
+    font-size: 1.4em;
+    letter-spacing: 5px;
+}
+.choose_payment{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.pay_title{
+    width: 100%;
+    text-align: center;
+    margin-top: 1em;
+    font-size: 1.3em;
+}
+.squares{
+    max-width: 100vw;
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 5%;
+    align-items: center;
+}
+.square{
+    min-width: 70px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #eb7143;
+    margin-left: 10px;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    border-radius: 10px;
+    font-weight: bold;
+}
+.icon svg{
+    width: 25px;
+    height: 25px;
+    fill: white;
+}
+.icon img{
+    width: 80%;
 }
