--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -495,8 +496,8 @@ h1{
 .price{
     color: rgb(235, 113, 67);
     text-shadow: rgb(255 164 183) 5px 0px;
-    font-size: 1.4em;
-    letter-spacing: 5px;
+    font-size: 1.9em;
+    letter-spacing: 1px;
 }
 .choose_payment{
     width: 100%;
@@ -521,6 +522,9 @@ h1{
     padding: 5%;
     align-items: center;
 }
+.squares::-webkit-scrollbar{
+    display: none;
+}
 .square{
     min-width: 70px;
     height: 35px;
@@ -528,12 +532,15 @@ h1{
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: #eb7143;
+    background-color: #181818;
     margin-left: 10px;
     padding: 10px 10px 10px 10px;
     text-align: center;
     border-radius: 10px;
     font-weight: bold;
+}
+.square.selected{
+    background-color: #eb7143;
 }
 .icon svg{
     width: 25px;
@@ -542,4 +549,83 @@ h1{
 }
 .icon img{
     width: 80%;
+}
+.stripe-icon svg{
+    width: 50px;
+    height: 50px;
+}
+.credit_card_container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.cerdit_card{
+    width: 80%;
+    max-width: 500px;
+    background: rgb(34,29,121);
+    background: linear-gradient(155deg, rgba(34,29,121,1) 32%, rgba(24,24,134,1) 70%, rgba(41,22,184,1) 100%);
+    display: flex;
+    border-radius: 10px;
+    min-height: 200px;
+    color: white;
+    flex-wrap: wrap;
+}
+.credit_header,.credit_bottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.bank_name img{
+    width: 50px;
+}
+.chip{
+    width: 42px;
+    height: 32px;
+    background: rgb(255,253,88);
+    background: linear-gradient(155deg, rgba(255,253,88,1) 32%, rgba(235,218,58,1) 70%, rgba(213,210,37,1) 100%);
+    border-radius: 5px;
+}
+.card_numbers{
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: 3px;
+}
+.credit_bottom{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: .7em;
+}
+.svg_inps{
+    width: 40px;
+}
+.some_inputs form{
+    width: 25% !important;
+}
+.some_inputs{
+    display: flex;
+    justify-content: space-between;
+}
+.some_inputs input,.some_inputs select{
+    font-size: .8em;
+}
+.w-90{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    display: block;
+    margin:auto;
 }
