--- a/css/estilo.css
+++ b/css/estilo.css
@@ -629,3 +629,34 @@ h1{
     display: block;
     margin:auto;
 }
+.hidden{
+    display: none;
+}
+.dark_line{
+    width: 100%;
+    height: 40px;
+    background-color: black;
+    margin-top: 2.5em;
+}
+.cvv{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-right: 2em;
+    font-size: 1.1em;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+.cvv span{
+    background-color: white;
+    color: black;
+    padding: 5px 20px 5px 20px;
+    text-align: center;
+    /* align text top */
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 5px;
+
+}
