Open pay pago fijo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -488,7 +488,7 @@ h1{
     opacity: 0.5;
 }
 .desc_plan{
-    margin-top: 2em;
+    margin-top: .4em;
     margin-left: 8px;
     margin-right: 8px;
     font-size: 1.9em;
