--- a/css/estilo.css
+++ b/css/estilo.css
@@ -567,7 +567,7 @@ h1{
     align-items: center;
     flex-wrap: wrap;
 }
-.cerdit_card{
+.credit_card{
     width: 80%;
     max-width: 500px;
     background: rgb(239,70,27);
