--- a/css/estilo.css
+++ b/css/estilo.css
@@ -684,7 +684,7 @@ h1{
     transform: translate(-50%, -50%);
     width: 80%;
     max-width: 500px;
-    background: #f1f1f1;
+    background: #f7f7f7;
     border-radius: 10px;
     color: white;
     flex-wrap: wrap;
@@ -720,4 +720,101 @@ h1{
     color: #221f1f;
     font-weight: bold;
     font-size: 1.4em;
+}
+.backdrop_modal:not(.visible){
+    display: none;
+}
+.success_alert{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    color: black;
+}
+.success_alert img{
+    width: 100%;
+}
+.modal_content img{
+    max-width: 100%;
+}
+.text_success{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: auto;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.text_success p,.text_success h3{
+    width: 90%;
+}
+.text_success p{
+    margin-top: 10px;
+    font-size: .9em;
+    font-weight: 100;
+}
+.text_success h3{
+    font-size: 1.6em;
+    font-weight: bold;
+}
+.button_hov {
+    margin-top: 1em;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background: #38d368;
+    overflow: hidden;
+    border: none;
+}
+
+.button_hov:after {
+    content: " ";
+    width: 0%;
+    height: 100%;
+    background: #221f1f;
+    position: absolute;
+    transition: all 0.4s ease-in-out;
+    right: 0;
+}
+
+.button_hov:hover::after {
+ right: auto;
+ left: 0;
+ width: 100%;
+}
+
+.button_hov span {
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    padding: 15px 25px;
+    color: #fff;
+    font-size: 1.3em;
+    letter-spacing: 2px;
+    z-index: 20;
+    transition: all 0.3s ease-in-out;
+    font-weight: bold;
+}
+
+.button_hov:hover span {
+ color: white;
+ animation: scaleUp 0.3s ease-in-out;
+}
+
+@keyframes scaleUp {
+ 0% {
+  transform: scale(1);
+ }
+
+ 50% {
+  transform: scale(0.95);
+ }
+
+ 100% {
+  transform: scale(1);
+ }
 }
