--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,40 @@
 /* medias for desktop */
 @media only screen and (min-width: 800px) {
+    .bottom_card.full {
+        max-width: 440px;
+    }
+    .content_card {
+        justify-content: space-between !important;
+    }
+    .bottom_card.full {
+        max-height: 100%;
+    }
+    .max-h{
+        height: 100%;
+        overflow-y: scroll;
+    }
+    .max-h{
+        max-height: 100%;
+        overflow-y: scroll;
+        padding-top: 2em;
+        padding-bottom: 4em;
+    }
+    /* width */
+    .max-h::-webkit-scrollbar {
+        width: 8px;
+    }
+    
+    /* Track */
+    .max-h::-webkit-scrollbar-thumb {
+        background: #f75e2a;
+        border-radius: 4px;
+    }
+    
+    /* Handle */
+    .max-h::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px #2222221f;
+        border-radius: 4px;
+    }
     .card{
         position: relative;
         background: linear-gradient(184deg, var(--degree_main), var(--degree_secondary) 80%);
