--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,14 +8,14 @@
 .max-h{
     max-height: 100%;
     overflow-y: scroll;
-    padding-top: 2em;
+    padding-top: 5em !important;
     padding-bottom: 4em;
 }
 /* medias for desktop */
 @media only screen and (min-width: 800px) {
     .max-h{
-        padding-top: 5em;
-    }
+        padding-top: 2em !important;
+    }   
     .bottom_card.full {
         max-width: 440px;
     }
